Changed from PHP to CGI Python.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </div>
 <p class="sentence" id="sentence"></p>
 <p class="notes">By the way, you probably shouldn't resize the browser window.</p>
-<p class="notes"><a href="tos.php">Terms of Service</a></p>
+<p class="notes"><a href="tos.html">Terms of Service</a></p>
 <p class="notes"><a href="http://github.com/Kurper/amalgam">Source</a></p>
 </body>
 </html>
