--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -1,5 +1,24 @@
 <html>
 <head>
 <script src="js/babble.js"></script>
+<title>Babble</title>
+<link rel="shortcut icon" href="/favicon.ico" />
+<link rel="stylesheet" type="text/css" href="style.css" />
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 </head>
-Butts
+<body>
+<div class="gamebox" id="gamebox"></div>
+
+
+<div id="timer"><div id="timediv"></div><div id="timerfull"></div></div>
+<br />
+
+<div class="chat" id="chat">
+        <div class="members" id="members"><table id="membertable"></table></div>
+        <div class="chatmsgs" id="chatmsgs"></div><div class="clear"></div>
+</div>
+
+<div id="footer">
+<p class="notes"><a href="http://github.com/GregorStocks/babble">Source</a></p>
+</div>
+</body>
