--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -1,10 +1,21 @@
 <html>
 <head>
-<script src="js/amalgam.js"></script>
-<script src="js/dictionary.js"></script>
-<script src="js/babble.js"></script>
+<script src="js/babble-autogen.js"></script>
+
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+<script src="js/jquery.event.drag-1.5.js" type="text/javascript"></script>
+<script src="js/jquery.event.drop-1.2.js" type="text/javascript"></script>
+<script src="js/jquery.cookie.js" type="text/javascript"></script>
+<script src="js/jquery.rightClick.js" type="text/javascript"></script>
+<script src="js/jquery.disable.text.select.js" type="text/javascript"></script>
+<script src="js/jquery.tooltip.js" type="text/javascript"></script>
+<script src="js/jquery.dimensions.js" type="text/javascript"></script>
+<script src="js/sha1.js" type="text/javascript"></script>
+<script src="js/dictionary.js" type="text/javascript"></script>
+<script src="js/amalgam.js" type="text/javascript"></script>
 <title>Babble</title>
 <link rel="shortcut icon" href="/favicon.ico" />
+<link rel="stylesheet" type="text/css" href="jquery.tooltip.css" />
 <link rel="stylesheet" type="text/css" href="style.css" />
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 </head>
