Make chat work in the hackiest possible way (abolishing session keys)

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -44,4 +44,9 @@
 <div id="footer">
 <p class="notes"><a href="http://github.com/GregorStocks/babble">Source</a></p>
 </div>
+
+<form action="" name="hiddenthings">
+        <input type="hidden" id="sesskey" name="sesskey" value="0" />
+        <input type="hidden" id="roomid" name="roomid" value="1" />
+</form>
 </body>
