--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -13,6 +13,7 @@
 <script src="js/jquery.dimensions.js" type="text/javascript"></script>
 <script src="js/sha1.js" type="text/javascript"></script>
 <script src="js/dictionary.js" type="text/javascript"></script>
+<script src="js/dictionary-autogen.js" type="text/javascript"></script>
 <script src="js/amalgam.js" type="text/javascript"></script>
 <title>Babble</title>
 <link rel="shortcut icon" href="/favicon.ico" />
