--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -44,7 +44,10 @@
 </div>
 
 <div id="footer">
-<p class="notes"><a href="http://github.com/GregorStocks/babble">Source</a></p>
+<p class="notes">
+  <a href="http://github.com/GregorStocks/babble">Source</a> |
+  <a href="http://github.com/GregorStocks/babble/commits/master">Changelog</a>
+</p>
 </div>
 
 <form action="" name="hiddenthings">
